{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 109,
  "lineage": "0fe8c582-0c12-356c-aa21-a385bbcb24fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:892513656059:loadbalancer/app/sourcefuss-load-balancer/c8f704efe385157c",
            "arn_suffix": "app/sourcefuss-load-balancer/c8f704efe385157c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "sourcefuss-load-balancer-1520343475.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:892513656059:loadbalancer/app/sourcefuss-load-balancer/c8f704efe385157c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sourcefuss-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02dc8be265a7cc862"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05a54f2853293eadb"
              },
              {
                "subnet_id": "subnet-0f66989455b72779d"
              }
            ],
            "subnets": [
              "subnet-05a54f2853293eadb",
              "subnet-0f66989455b72779d"
            ],
            "vpc_id": "vpc-08e010a1e4f3e53ce",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "sourcefuss-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:892513656059:listener/app/sourcefuss-load-balancer/c8f704efe385157c/307a203d36663f4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:892513656059:targetgroup/sourcefuss-tg/53edd47adeb9d81c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:892513656059:listener/app/sourcefuss-load-balancer/c8f704efe385157c/307a203d36663f4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:892513656059:loadbalancer/app/sourcefuss-load-balancer/c8f704efe385157c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.myapp-tg",
            "aws_security_group.alb-sg",
            "aws_subnet.public",
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "myapp-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:892513656059:targetgroup/sourcefuss-tg/53edd47adeb9d81c",
            "arn_suffix": "targetgroup/sourcefuss-tg/53edd47adeb9d81c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:892513656059:targetgroup/sourcefuss-tg/53edd47adeb9d81c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "sourcefuss-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "dependencies": [
            "aws_vpc.sourcefuss-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "test-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a67ff73d678bc79",
            "domain": "vpc",
            "id": "eipalloc-04a67ff73d678bc79",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-206-36-182.compute-1.amazonaws.com",
            "public_ip": "44.206.36.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sourcefuss-igw",
            "aws_vpc.sourcefuss-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07626e54d31c40dc6",
            "domain": "vpc",
            "id": "eipalloc-07626e54d31c40dc6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-164-212-195.compute-1.amazonaws.com",
            "public_ip": "54.164.212.195",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.sourcefuss-igw",
            "aws_vpc.sourcefuss-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sourcefuss-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:internet-gateway/igw-0845cb84cfdedd07c",
            "id": "igw-0845cb84cfdedd07c",
            "owner_id": "892513656059",
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "dependencies": [
            "aws_vpc.sourcefuss-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "sourcefuss-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a67ff73d678bc79",
            "connectivity_type": "public",
            "id": "nat-01f18d094812eaff0",
            "network_interface_id": "eni-02c098dde6810ef13",
            "private_ip": "172.16.2.136",
            "public_ip": "44.206.36.182",
            "subnet_id": "subnet-0f66989455b72779d"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.sourcefuss-igw",
            "aws_subnet.public",
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07626e54d31c40dc6",
            "connectivity_type": "public",
            "id": "nat-0a9ee6aac68a7e8aa",
            "network_interface_id": "eni-051f6047a6ecc151d",
            "private_ip": "172.16.3.226",
            "public_ip": "54.164.212.195",
            "subnet_id": "subnet-05a54f2853293eadb"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.sourcefuss-igw",
            "aws_subnet.public",
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0845cb84cfdedd07c",
            "id": "r-rtb-0f11cd8dd61c7bcd71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f11cd8dd61c7bcd7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sourcefuss-igw",
            "aws_vpc.sourcefuss-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:route-table/rtb-0376d19795c2b19f7",
            "id": "rtb-0376d19795c2b19f7",
            "owner_id": "892513656059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01f18d094812eaff0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.sourcefuss-igw",
            "aws_nat_gateway.sourcefuss-natgw",
            "aws_subnet.public",
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:route-table/rtb-0dae5926cfa39a6cb",
            "id": "rtb-0dae5926cfa39a6cb",
            "owner_id": "892513656059",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a9ee6aac68a7e8aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.sourcefuss-igw",
            "aws_nat_gateway.sourcefuss-natgw",
            "aws_subnet.public",
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e59676ea0537ee5",
            "route_table_id": "rtb-0376d19795c2b19f7",
            "subnet_id": "subnet-0e9b7b0cad0c122e3"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.sourcefuss-igw",
            "aws_nat_gateway.sourcefuss-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090f66ca7243e1ed2",
            "route_table_id": "rtb-0dae5926cfa39a6cb",
            "subnet_id": "subnet-09ea9dc29174ede51"
          },
          "dependencies": [
            "aws_eip.test-eip",
            "aws_internet_gateway.sourcefuss-igw",
            "aws_nat_gateway.sourcefuss-natgw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:security-group/sg-02dc8be265a7cc862",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02dc8be265a7cc862",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sourcefuss-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "892513656059",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sourcefuss-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:security-group/sg-0661c6810548ac03d",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0661c6810548ac03d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02dc8be265a7cc862"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sourcefuss-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "892513656059",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_vpc.sourcefuss-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:subnet/subnet-0e9b7b0cad0c122e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9b7b0cad0c122e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "892513656059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "dependencies": [
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:subnet/subnet-09ea9dc29174ede51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ea9dc29174ede51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "892513656059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "dependencies": [
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:subnet/subnet-0f66989455b72779d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f66989455b72779d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "892513656059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "dependencies": [
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:subnet/subnet-05a54f2853293eadb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a54f2853293eadb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "892513656059",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-08e010a1e4f3e53ce"
          },
          "dependencies": [
            "aws_vpc.sourcefuss-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sourcefuss-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:892513656059:vpc/vpc-08e010a1e4f3e53ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d0a11144e5ed0f9a",
            "default_route_table_id": "rtb-0f11cd8dd61c7bcd7",
            "default_security_group_id": "sg-02063b0d02ad4f7c7",
            "dhcp_options_id": "dopt-0cc77a5570a82f6b0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e010a1e4f3e53ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f11cd8dd61c7bcd7",
            "owner_id": "892513656059"
          }
        }
      ]
    }
  ]
}